# pollock

./: .cirrus.yml  .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  haddock.cabal  pollock.cabal  stack.yaml  weeder.toml
haddock-api/: .hlint.yaml  haddock-api.cabal  weeder.toml
haddock-api/src/: CompatGHC.hs  Pollock.hs
haddock-api/src/Haddock/: CompatPrelude.hs  Convert.hs  Doc.hs  GhcUtils.hs  Markup.hs  Options.hs  Parser.hs  Types.hs  Utils.hs
haddock-api/src/Haddock/Interface/: Coverage.hs  LexParseRn.hs  ParseModuleHeader.hs
haddock-api/src/Haddock/Parser/: Identifier.hs  Monad.hs  Util.hs
haddock-api/src/Pollock/: CompatGHC.hs  Documentation.hs  DriverPlugin.hs  ModuleInfo.hs  ProcessModule.hs
haddock-api/src/Pollock/Documentation/: Doc.hs  DocumentationForDecl.hs  ExportItem.hs  Metadata.hs  MetadataAndDoc.hs  Parser.hs
haddock-api/src/Pollock/ModuleInfo/: ModuleHeader.hs  ModuleInfo.hs
src/: Pollock.hs
src/Pollock/: CompatGHC.hs  Documentation.hs  DriverPlugin.hs  ModuleInfo.hs  ProcessModule.hs
src/Pollock/Documentation/: Doc.hs  ExportItem.hs  Metadata.hs  Parser.hs
src/Pollock/ModuleInfo/: ModuleHeader.hs  ModuleInfo.hs
