cabal-version:        3.0
name:                 haddock-api
version:              2.27.1
synopsis:             A documentation-generation tool for Haskell libraries
description:          Haddock is a documentation-generation tool for Haskell
                      libraries
license:              BSD-2-Clause
license-file:         LICENSE
author:               Simon Marlow, David Waern
maintainer:           Alec Theriault <alec.theriault@gmail.com>, Alex Biehl <alexbiehl@gmail.com>, Simon Hengel <sol@typeful.net>, Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>
homepage:             http://www.haskell.org/haddock/
bug-reports:          https://github.com/haskell/haddock/issues
copyright:            (c) Simon Marlow, David Waern
category:             Documentation
build-type:           Simple
tested-with:          GHC==9.4.*

extra-source-files:
  CHANGES.md

data-dir:
  resources
data-files:

library
  default-language: Haskell2010

  -- this package typically supports only single major versions
  build-depends: base            >= 4.16.0 && <5
               , ghc             >= 9.4 && <9.9
               , text            >= 2.0 && <2.2
               -- 0.14.4 fixes segfaults with text 2.0
               , attoparsec     >= 0.14.4 && <0.15

  -- Versions for the dependencies below are transitively pinned by
  -- the non-reinstallable `ghc` package and hence need no version
  -- bounds
  build-depends: bytestring
               , containers
               , mtl
               , transformers
               , ghc-boot

  hs-source-dirs: src

  ghc-options: -funbox-strict-fields -O2
               -Wall
               -Wcompat
               -Wcompat-unqualified-imports
               -Widentities
               -Wredundant-constraints
               -Wnoncanonical-monad-instances
               -Wmissing-home-modules
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wunused-packages


  exposed-modules:
    Pollock

  other-modules:
    Pollock.CompatGHC
    Haddock.Convert
    Haddock.Doc
    Haddock.GhcUtils
    Haddock.Interface.LexParseRn
    Haddock.Interface.ParseModuleHeader
    Haddock.Parser.Monad
    Haddock.Types
    Paths_haddock_api

  autogen-modules:
    Paths_haddock_api

source-repository head
  type:     git
  subdir:   haddock-api
  location: https://github.com/haskell/haddock.git
